--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,10 @@
+
+
+<div class="insForm">
 <div class="container">
 
-      <H3>Login</H3>
-            <a >MDR</a>
+      <H2>Login</H2>
+          
             <form  (submit)="login()">
                   <div class="form-check">
                         <input type="checkbox" class="form-check-input" name="isStudent" [(ngModel)]="user.isStudent">
@@ -26,4 +29,5 @@
                   <!-- <button class="btn btn-primary" type="submit" routerLink="/listStu">Connextion</button> -->
 
       </form>
+</div>
 </div>
