--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,20 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+
+<div>
   <h1>
     Welcome to {{ title }}!
   </h1>
+
+  <div class= pageAcc>
    <a href="/inscription">Inscription</a>
+   <a href="/login">Connexion</a>
+  </div>
 
-    <a href="/login">Connexion</a>
 </div>
-
 
   
 <router-outlet></router-outlet>
+<div>
+  <footer>
+
+  </footer>
+</div>
