--- a/src/app/space-prof/space-prof.component.html
+++ b/src/app/space-prof/space-prof.component.html
@@ -3,41 +3,75 @@
 
       <h2>List Students </h2>
 
-
-            <div *ngFor="let user of users">
-                        {{listStu}}
-            </div>
+<!-- 
+            <div *ngFor="let student of students">
+                       <a href="/profil/{{student._id}}">{{student.name}}</a> 
+            </div> -->
 
                
 
-      <!-- <table class="table">
+       <table class="table">
             <thead>
                   <tr>
                         <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">Nom</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Mot de Pass</th>
+                        <th scope="col">Classe</th>
+                        <th scope="col">Télephone</th>
                   </tr>
             </thead>
             <tbody>
-                  <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
+                  
+                  <tr *ngFor="let student of students; let i = index">
+                         <td>{{i + 1}}</td>
+                        <td><a href="/profil/{{student._id}}">{{student.name}}</a></td>
+                        <td>{{student.email}}</td>
+                        <td>{{student.password}}</td>
+                        <td>{{student.classe}}</td>
+                        <td>{{student.telephone}}</td>                    
                   </tr>
+                  
+            </tbody>
+      </table> 
+
+
+
+
+
+
+
+
+
+
+      <!-- <h1>Les utilisateurs</h1>
+      <table class="table table-striped">
+            <thead>
                   <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
+                        <th scope="col">Name</th>
+                        <th scope="col">Forname</th>
+                        <th scope="col">City</th>
+                        <th scope="col">Zipcode</th>
+                        <th scope="col">Password</th>
+                        <th scope="col">Supprimer</th>
+      
                   </tr>
+            </thead>
+            <tbody>
+                  <% for (var i in users){%>
                   <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
+                        <td><%=users[i].name%></td>
+                        <td><%=users[i].forname%></td>
+                        <td><%=users[i].city%></td>
+                        <td><%=users[i].zipcode%></td>
+                        <td><%=users[i].password%></td>
+                        <td><button type="delete" class="btn">DELETE</button></td>
                   </tr>
+                  <% }%>
+                  <tr>
+      
+                  </tr>
+      
             </tbody>
       </table> -->
 
