--- a/src/app/space-student/space-student.component.html
+++ b/src/app/space-student/space-student.component.html
@@ -1,5 +1,5 @@
 <div>
         <h2>Bienvenue sur votre espace personnel {{student.name}}</h2>
-        <!-- <h2>{{student.email}}</h2> -->
+        <h2>{{student.email}}</h2> 
 </div>
 
