--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -1,7 +1,7 @@
 
 
 <div>
-      <h2>Bienvenue sur votre espace personnel {{student.name}}</h2>
+      <h2>Bienvenue sur la espace {{student.name}}</h2>
       <!-- <h2>{{student.email}}</h2> -->
 </div>
 
