--- a/src/app/space-prof/space-prof.component.html
+++ b/src/app/space-prof/space-prof.component.html
@@ -3,10 +3,15 @@
 
       <h2>List Students </h2>
 
-<!-- 
-            <div *ngFor="let student of students">
+ 
+            <!-- <div *ngFor="let student of students">
                        <a href="/profil/{{student._id}}">{{student.name}}</a> 
-            </div> -->
+            </div>  -->
+
+            <div *ngFor="let projet of projets">
+                  <a href="#">{{projet.name}}ddddddddddddddd</a>
+            </div>
+
 
                
 
