--- a/src/app/inscription/inscription.component.html
+++ b/src/app/inscription/inscription.component.html
@@ -35,3 +35,22 @@
 
     </div>
 </div>
+
+<!-- <mat-card class="form-card">
+      <mat-card-header class="form-header">
+            <mat-card-title>S'inscrire</mat-card-title>
+            <mat-card-subtitle>Professeurs uniquement</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content class="form-container">
+            <mat-form-field>
+                  <input matInput placeholder="Entrez un email">
+            </mat-form-field>
+            <mat-form-field>
+                  <input matInput placeholder="Entrez un mot de passe">
+            </mat-form-field>
+
+      </mat-card-content>
+      <mat-card-actions align="end">
+            <button mat-button>VALIDER</button>
+      </mat-card-actions>
+</mat-card>  -->
